2005-07-21  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-art-mask.c: fixed clip paths having their transform applied twice
	
2005-07-20  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-marker.c: made markers work again. Took me 3 minutes at most... it's funny how some things that are procratinated about turn out to be easy.

2005-07-20  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c: created a text node that isn't being used yet but is proving very useful for type checking
	* rsvg-structure.c: created a default node initialiser function and destructor function, now everything has a style and children whether it needs to or not, adding to the memory footprint but increasing stability
	* rsvg-filter.c: makeing objects safe for when their children are of the wrong type

2005-07-11  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-structure.c: Bug 309885

2005-06-30  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-image.c: Bug 309220, from joss@debian.org
	* rsvg-file-util.c: Bug 309233 from joss@debian.org
	* test-rsvg.c: Ditto
	* rsvg.c: Bug 309234 from joss@debian.org
	* rsvg-structure.c: Bug 308472, from Behdad
	* rsvg-text.c: Bug 303086
	
2005-06-24  Dom Lachowicz <cinamod@hotmail.com>

	* *.c: Some sanity checking all over the place; fixes bug #308810
	
2005-06-23  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c: changed position of defs freeing, fixes bug #171281

2005-06-17  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-styles.c: bug #273989

2005-06-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c: Make sure the size of the graphic is determined by the width and height or the viewbox or defaults, in order.
	* rsvg.c, rsvg-styles.c: applied patch by Ryan Lortie as given in bug #306494

2005-06-14  Tor Lillqvist  <tml@novell.com>

	* configure.in: Get CFLAGS and LIBS also for fontconfig and
	freetype. Don't use -Wsign-promo, gcc 3.4 says that's only for C++
	and Objective-C.
