@@ -7,5 +7,5 @@ Name: librsvg
 Description: library that renders svg files
 Version: @VERSION@
 Requires: glib-2.0 gdk-pixbuf-2.0
-Libs: -L${libdir} -lrsvg-2
+Libs: -L${libdir} -lrsvg-2 -lrsvg-2-libart
 Cflags: -I${includedir}/librsvg-2
